--- a/css/styles.css
+++ b/css/styles.css
@@ -8,34 +8,35 @@ line-height: 1.5;
 margin: 0;
 padding: 0;
 color: #505050;
+background-image: url("../images/sunflowers3.jpg");
+background-repeat: no-repeat;
+background-attachment: fixed;
+background-size: cover;
 }
 
 section{
 padding: 20px;
 }
 
+img:hover {
+    webkit-filter: blur(1.5px); /* Chrome, Safari, Opera */
+    filter: blur(1.5px);
+}
+
 header {
-background-image: url("../images/sunflowers3.jpg");
-color:  #cfbcae;
+color: #cfbcae;
 text-align: center;
 line-height: 0.5;
 padding: 10px
+}
+
+.page-wrap {
+background-color: rgba(0, 0, 0, 0.5);
+height: 100%;
 
 }
 
 
-header h1 {
-font-family: 'Josefin Sans', sans-serif;
-font-size: 70px;
-font-weight: bold
-color: #564037;
-}
-
-header h2 {
-font-family: 'Josefin Sans', sans-serif;
-font-size: 40px;
-color: #564037;
-}
 
 h1, h2, h3 {
 font-family: 'Josefin Sans', sans-serif;
@@ -57,6 +58,18 @@ h3 {
 font-size: 18px;
 }
 
+header h1 {
+color: #cfbcae; /* Light-Brown*/
+font-family: 'Josefin Sans', sans-serif;
+font-size: 70px;
+font-weight: bold
+}
+
+header h2 {
+font-family: 'Josefin Sans', sans-serif;
+font-size: 40px;
+color: #cfbcae; /* Light-Brown*/
+}
 .profile img {
   border-radius: 50%;
   float: left;
@@ -67,21 +80,26 @@ font-size: 18px;
 .content-wrap {
   width: 1000px;
   margin: 0 auto;
+  max-width: 1000px;
+  width: 90%;
 }
 
 
 .profile {
-background: #de9602; /* Orange */
-color: #505050;
+color: #ffffff;
 font-family: 'Merriweather', serif;
-font-weight: lighter;
+font-weight: 300;
 font-size: 16px;
-padding-top: 8px;
-padding-bottom: 10px;
+padding-top: 30px;
+padding-bottom: 30px;
+}
+
+.profile h1 {
+color: #cfbcae;
 }
 
 .work {
-background: #fdd021; /* Yellow */
+background-image: linear-gradient( rgba(253, 208, 33, 0.75),rgba(255, 255, 255, 0.75));
 color: #505050;
 font-family: 'Merriweather', serif;
 font-weight: lighter;
@@ -109,8 +127,7 @@ margin-top: 0;
 }
 
 .skills {
-background: #fef266; /* Yellow */
-color: #505050;
+color: rgba(207, 188, 174, 0.8);/* Light-Brown*/
 font-family: 'Merriweather', serif;
 font-weight: lighter;
 font-size: 16px;
@@ -121,14 +138,18 @@ padding-bottom: 10px;
 
 .skills h1 {
 margin-bottom: 0;
+color: #cfbcae; /* Light-Brown*/
+
+
 }
 
 .skills h2 {
 margin-bottom: 0;
 margin-top: 0;
+color: #cfbcae; /* Light-Brown*/
 }
 .education {
-background: #cfbcae; /* Light-Brown*/
+background: rgba(207, 188, 174, 0.88); /* Light-Brown*/
 color: #505050;
 font-family: 'Merriweather', serif;
 font-weight: lighter;
@@ -136,6 +157,7 @@ font-size: 16px;
 margin-top: -25px;
 margin-bottom: 0;
 padding-top: 8px;
+padding-bottom: 30px;
 
  }
 
@@ -149,19 +171,22 @@ margin-top: 0;
 
  .education h3 {
 margin-bottom: 0;
+margin-top: 0;
  }
 
 .education p {
 margin-top: 0;
 }
 
+.contact h1 {
+color: #cfbcae;
+}
 .contact {
-background: #564037; /*Brown*/
 font-family: 'Merriweather', serif;
 font-weight: lighter;
-font-size: 16px;
+font-size: 20px;
 margin-top: -25px;
 padding-top: 8px;
-background-image: url("../images/sunflowers3.jpg");
+color: #cfbcae; /* Light-Brown*/
 
 }
